fix width overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header {
 
 .container-fluid {
     padding: 2em;
+    overflow-x: hidden;
 }
 
 main {
